# moneypal

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README.txt
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: moneypal_test.cpp
